# full-stack-fastapi-tasks-template

./: .env  .gitignore  README.md  docker-compose-pypi.yml  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: crud.py  main.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 05d63f4985d1_user_create.py  60884f7304da_celery.py  9dd23505d377_celery.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: items.py  login.py  private.py  sso.py  tasks.py  users.py  utils.py
backend/app/core/: config.py  db.py
backend/app/email-templates/src/: new_account.mjml  new_account_mail_verification.mjml
backend/tests/: conftest.py
backend/tests/utils/: user.py
flower-app/: Dockerfile  pyproject.toml
flower-app/app/: main.py
frontend/: package-lock.json
frontend/src/: routeTree.gen.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/client/core/: request.ts
frontend/src/components/Common/: PaginationFooter.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: activate.tsx  login.tsx
fusionauth/: README.md
fusionauth/kickstart/: kickstart.json
pypiserver/: .gitignore  Dockerfile  README.md  publish.sh  startup.sh  update.sh
rabbitmq/: Dockerfile  README.md  rabbitmq.conf
workers/: README.md
workers/worker-queue-alpha/: Dockerfile  README.md  pyproject.toml
workers/worker-queue-alpha/worker/: main.py
workers/worker-queue-alpha/worker/core/: config.py
workers/worker-queue-beta/: Dockerfile  pyproject.toml
workers/worker-queue-beta/worker/: main.py
workers/worker-queue-beta/worker/core/: config.py
