[project]
name = "flower-app"
version = "0.1.0"
description = ""
authors = [{ name = "Daniele Bigoni", email = "dabi@limitcycle.it" }]
requires-python = "~=3.13.0"
readme = "README.md"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings<3.0.0,>=2.2.1",
    "psycopg[binary]>=3.1.13,<4",
    "celery~=5.4.0",
    "flower~=2.0",
    "stack-settings<1.0.0,>=0.0.0"
]
