[project]
name = "worker-queue-alpha"
version = "0.1.0"
description = ""
authors = [{ name = "Daniele Bigoni", email = "dabi@limitcycle.it" }]
requires-python = "~=3.13.0"
readme = "README.md"
dependencies = [
    "pydantic~=2.7",
    "pydantic-settings~=2.2",
    "psycopg[binary]>=3.1.13,<4",
    "celery~=5.4.0",
    "stack-datamodel",
    "stack-shared-tasks",
    "stack-settings",
]
